maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:43: error: ';' expected but ',' found.
  var dir = {0, 0, 0, 0}; //[0]:Nord, sens horaire
              ^ShortestPathMaze:47: error: ';' expected but ',' found.
  var xModDir = {0, 1, 0, -1};
                  ^ShortestPathMaze:48: error: ';' expected but ',' found.
  var yModDir = {1, 0, -1, 0}
                  ^